-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.17, 6.2.12, 6.5.5, 6.6.3, 6.7.0
-
None
-
-
80bfeb4e7 (dev), a225fb5d8 (6.7), 8b3fa7660 (tqtc/lts-6.5)
Mouse enter event is no longer delivered when mouse leaves windows with pressed button.
- press mouse button on e.g. line edit
- move mouse cursor outside the window
- move mouse cursor inside the window over the line edit again
- release mouse button
Only leave events, no enter events, mouse cursor shape is incorrect (arrow instead of text cursor).
Attachment: cursor-test.tar.gz
Here is my solution to fix the issue: QTBUG-119864-v1.diff
Caused by: QTBUG-119864
Related older iussues:
- relates to
-
QTBUG-68080 we need to move popup event forwarding logic from QWidgetWindow::handleMouseEvent() to QGuiApplication
-
- Closed
-
For Gerrit Dashboard: QTBUG-124003 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
552999,7 | XCB: Suppress leave event, when mouse leaves with button pressed | dev | qt/qtbase | Status: MERGED | +2 | 0 |
554071,2 | XCB: Suppress leave event, when mouse leaves with button pressed | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |
557413,2 | XCB: Suppress leave event, when mouse leaves with button pressed | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
601473,1 | XCB: Suppress leave event, when mouse leaves with button pressed | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: ABANDONED | +2 | 0 |